New clang warns about boolean checks for |this| pointer in RenderObject debug methods https://bugs.webkit.org/show_bug.cgi?id=136599

Remove unnecessary null checking.

Reviewed by David Kilzer.

Not testable.

* rendering/RenderObject.cpp:
(WebCore::RenderObject::showRenderObject): Deleted.
(WebCore::RenderObject::showRenderSubTreeAndMark): Deleted.


Canonical link: https://commits.webkit.org/166874@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189310 268f45cc-cd09-0410-ab3c-d52691b4dbfc